# kalmarctf

./: README.md
2024/: README.md
2024/crypto/breakfaest/breakfaest-chal/: Cargo.toml
2024/crypto/breakfaest/breakfaest-chal/src/: main.rs  signature.rs
2025/misc/nix-build-aas/ui/: Cargo.toml  package.nix
2025/misc/nix-build-aas/ui/src/: main.rs  state.rs
2025/misc/nix-build-aas/ui/static/: Iosevka.css  main.css
2025/misc/nix-build-aas/ui/templates/: main.html
crypto/Dreamhash/: readme.txt
crypto/EasyOneTimePad/: readme.txt
crypto/Reconstruction/: readme.txt
crypto/l33t_generator/: readme.txt
forensic/cards/: create.txt
forensic/sewing-waste-and-agriculture-leftovers/: client.py  create.txt
misc/kalmarunionen-fun/: create.txt  ctfd.json  hint.txt  kalmar-fun.txt  kf-solve.py  separator.py
pwn/: exploit.py
pwn/fipc/: README.md
pwn/hyper-k/: README.md
pwn/mjs/: README.md  solve.js
pwn/robber/: README.md
pwn/src/: chall.rop  main.c  rop_compiler.py  rop_lang.c  rop_lang.h
pwn/swedish_memcpy/: README.md
rev/CycleChaser/: readme.txt
rev/cyclechaser/: readme.txt
rev/cyclechaser_revenge/: readme.txt
rev/jumping_on_the/: README.md  game.pkg
rev/jumping_on_the/ppu/crates/runty8/: Cargo.toml
rev/jumping_on_the/ppu/crates/runty8/runty8/: Cargo.toml
rev/jumping_on_the/ppu/crates/runty8/runty8-core/: Cargo.toml
rev/jumping_on_the/ppu/crates/runty8/runty8-core/src/: draw.rs  draw_data.rs  font.rs  map.rs  state.rs
rev/jumping_on_the/ppu/crates/runty8/runty8-event-loop/: Cargo.toml
rev/jumping_on_the/ppu/crates/runty8/runty8-runtime/src/: lib.rs
web/2Cool4School/: README.md  docker-compose.yml  shared.env
web/Healthy-Calc/: ctfd.json  (+1 more)
(+430 files in other folders)
